# gximagecomputing

./: .gitignore  MANIFEST.in  Makefile  README.md  RELEASING.md  pyinit.cpp  pyproject.toml  setup.py
.github/workflows/: build-wheels.yml  build_wheels.yml
Python/: RenderExample.py
cpp/: ExtMath.cpp  ExtMath.h  FF.cpp  MWtransfer.cpp  Messages.cpp  RenderIrregular.cpp  RenderX.vcxproj  Rmain.cpp  makefile
docs/: Makefile  cli_api.rst  conf.py  examples.rst  index.rst  quickstart.rst  sdk_api.rst  viewer_api.rst
examples/: README.md  RenderExample.pro  RenderExample.py  RenderExampleEUV.pro  RenderExampleMW.pro  compile_local_idl
examples/idl/: InterpolateEBTELexample.pro  RenderExampleEUV.pro  RenderExampleMW.pro  compile_local_idl
examples/python/cli/: RenderExampleEUV.py  RenderExampleMW.py
examples/python/sdk/: sdk_render_euv.py  sdk_render_mw.py
idl/: ConvertModelFiles.pro  DefineCoronaParams.pro  LoadGXmodel.pro  MakeSimulationBox.pro  RenderExample.pro
idlcode/: ConvertModelFiles.pro  ConvertToGX.pro  ConvertToMaps.pro  ConvertToMapsEUV.pro  DefineCoronaParams.pro  ExportLOSparms.pro  FillVolumeNT.pro  GXObserverGeometry.pro  InterpolateEBTEL.pro  LoadEBTEL.pro  LoadEUVresponse.pro  LoadGXmodel.pro  MakeSimulationBox.pro  MakeSimulationBoxEUV.pro  ReserveOutputSpace.pro  ReserveOutputSpaceEUV.pro
scripts/idl/: DumpIDLLoadGXmodelParity.pro  dump_computeeuv_inputs.pro  renderexampleeuv_test.pro  renderexamplemw_test.pro  run_dump_idl_loadgxmodel_parity
scripts/python/: BuildH5FromSavGroundTruth.py  CompareComputeEUVInputs.py  CompareModelSources.py  ComparePythonVsIDLEUVMaps.py  ComparePythonVsIDLMaps.py  CompareRenderInputs.py  CompareRenderOutputs.py  DumpComputeEUVInputs.py  DumpPythonLoadModelParity.py  RegressionRoundTripSavH5.py  seed_test_data_from_idl.py
scripts/unix/: renderexampleeuv_test.sh  renderexamplemw_test.sh
scripts/win/: renderexampleeuv_test.bat  renderexamplemw_test.bat
source/: Coulomb.cpp  DEM.cpp  EUVmain.cpp  EUVmain.h  ExtMath.cpp  ExtMath.h  FF.cpp  GR.cpp  GXdefs.h  GXexports.cpp  IDLinterface.h  MWtransfer.cpp  MWtransfer.h  Messages.cpp  Messages.h  Plasma.cpp  Plasma.h  PyInterface.cpp  RenderGRFF.vcxproj  RenderIrregular.cpp  RenderIrregular.h  RenderX.vcxproj  Rmain.cpp  Rmain.h  Zeta.cpp  makefile
src/gximagecomputing/: CHR_DATA_CONTRACTS.md  __init__.py  radio.py  sdk.py
src/gximagecomputing/io/: __init__.py  ebtel.py  maps_h5.py  model.py  voxel_id.py
src/gximagecomputing/utils/: __init__.py  render_map_view.py
src/gximagecomputing/viz/: __init__.py  render_map_view.py
src/gximagecomputing/workflows/: __init__.py  _render_common.py  render_euv.py  render_mw.py
src/gxrender/: __init__.py  euv.py  radio.py  sdk.py
src/gxrender/geometry/: __init__.py  observer_geometry.py
src/gxrender/io/: __init__.py  maps_h5.py  model.py  sav_to_h5.py
src/gxrender/utils/: __init__.py  render_map_view.py  test_data.py
src/gxrender/viz/: __init__.py  render_map_view.py
src/gxrender/workflows/: __init__.py  _render_common.py  observer_utils.py  render_euv.py  render_mw.py
src/pyGXrender/: __init__.py  euv.py  radio.py
src/pyGXrender/io/: __init__.py  maps_h5.py  model.py  sav_to_h5.py
src/pyGXrender/utils/: __init__.py  render_map_view.py
src/pyGXrender/viz/: __init__.py  render_map_view.py
src/pyGXrender/workflows/: __init__.py  _render_common.py  render_euv.py  render_mw.py
tests/: BuildH5FromSavGroundTruth.py  CompareLoaderDumpParity.py  CompareModelSources.py  ComparePythonVsIDLEUVMaps.py  ComparePythonVsIDLMaps.py  CompareRenderInputs.py  CompareRenderOutputs.py  DumpComputeEUVInputs.py  DumpIDLLoadGXmodelParity.pro  DumpPythonLoadModelParity.py  README.md  RegressionRoundTripSavH5.py  dump_computeeuv_inputs.pro  renderexampleeuv_test.pro  renderexampleeuv_test.sh  renderexamplemw_test.pro  renderexamplemw_test.sh  run_dump_idl_loadgxmodel_parity  seed_test_data_from_idl.py  test_model_loader_parity.py  test_observer_rendering.py  test_test_data_utils.py
